# docs/swagger.yaml
@@ -1,13 +1,13 @@
 basePath: /api
 definitions:
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.CreateGroupRequest:
+  requests.CreateGroupRequest:
     properties:
       name:
         type: string
     required:
     - name
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.CreateTaskRequest:
+  requests.CreateTaskRequest:
     properties:
       group_id:
         type: string
@@ -19,7 +19,7 @@ definitions:
     - group_id
     - title
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.CreateUserRequest:
+  requests.CreateUserRequest:
     properties:
       email:
         type: string
@@ -32,26 +32,26 @@ definitions:
     - name
     - password
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.DeleteTaskRequest:
+  requests.DeleteTaskRequest:
     properties:
       id:
         type: string
     required:
     - id
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.FriendRequest:
+  requests.FriendRequest:
     properties:
       friend_id:
         type: string
     required:
     - friend_id
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.GetChatRequest:
+  requests.GetChatRequest:
     properties:
       with_user_id:
         type: string
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.LoginRequest:
+  requests.LoginRequest:
     properties:
       email:
         type: string
@@ -61,14 +61,21 @@ definitions:
     - email
     - password
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.SendChatRequest:
+  requests.MarkMessagesReadRequest:
+    properties:
+      up_to_message_id:
+        type: string
+      with_user_id:
+        type: string
+    type: object
+  requests.SendChatRequest:
     properties:
       content:
         type: string
       to_user_id:
         type: string
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.UpdateGroupRequest:
+  requests.UpdateGroupRequest:
     properties:
       id:
         type: string
@@ -78,7 +85,7 @@ definitions:
     - id
     - name
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.UpdateTaskRequest:
+  requests.UpdateTaskRequest:
     properties:
       id:
         type: string
@@ -89,7 +96,7 @@ definitions:
     required:
     - id
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_requests.UpdateUserRequest:
+  requests.UpdateUserRequest:
     properties:
       email:
         type: string
@@ -98,14 +105,14 @@ definitions:
       password:
         type: string
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.AuthResponse:
+  responses.AuthResponse:
     properties:
       token:
         type: string
       user:
-        $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.UserResponse'
+        $ref: '#/definitions/responses.UserResponse'
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.GroupResponse:
+  responses.GroupResponse:
     properties:
       color:
         type: string
@@ -114,11 +121,11 @@ definitions:
       name:
         type: string
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedGroupResponse:
+  responses.PaginatedGroupResponse:
     properties:
       data:
         items:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.GroupResponse'
+          $ref: '#/definitions/responses.GroupResponse'
         type: array
       limit:
         type: integer
@@ -129,11 +136,11 @@ definitions:
       total_pages:
         type: integer
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedTaskResponse:
+  responses.PaginatedTaskResponse:
     properties:
       data:
         items:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.TaskResponse'
+          $ref: '#/definitions/responses.TaskResponse'
         type: array
       limit:
         type: integer
@@ -144,11 +151,11 @@ definitions:
       total_pages:
         type: integer
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedUserResponse:
+  responses.PaginatedUserResponse:
     properties:
       data:
         items:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.UserResponse'
+          $ref: '#/definitions/responses.UserResponse'
         type: array
       limit:
         type: integer
@@ -159,7 +166,7 @@ definitions:
       total_pages:
         type: integer
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.TaskResponse:
+  responses.TaskResponse:
     properties:
       group_color:
         type: string
@@ -172,7 +179,7 @@ definitions:
       title:
         type: string
     type: object
-  github_com_ViniciusLugli_mindshelf_internal_dtos_responses.UserResponse:
+  responses.UserResponse:
     properties:
       avatar_url:
         type: string
@@ -211,7 +218,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedGroupResponse'
+            $ref: '#/definitions/responses.PaginatedGroupResponse'
         "400":
           description: Bad Request
           schema:
@@ -245,7 +252,7 @@ paths:
         name: group
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.CreateGroupRequest'
+          $ref: '#/definitions/requests.CreateGroupRequest'
       produces:
       - application/json
       responses:
@@ -332,7 +339,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.GroupResponse'
+            $ref: '#/definitions/responses.GroupResponse'
         "400":
           description: Bad Request
           schema:
@@ -388,7 +395,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedGroupResponse'
+            $ref: '#/definitions/responses.PaginatedGroupResponse'
         "400":
           description: Bad Request
           schema:
@@ -422,7 +429,7 @@ paths:
         name: group
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.UpdateGroupRequest'
+          $ref: '#/definitions/requests.UpdateGroupRequest'
       produces:
       - application/json
       responses:
@@ -471,7 +478,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.TaskResponse'
+            $ref: '#/definitions/responses.TaskResponse'
         "400":
           description: Bad Request
           schema:
@@ -527,7 +534,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedTaskResponse'
+            $ref: '#/definitions/responses.PaginatedTaskResponse'
         "400":
           description: Bad Request
           schema:
@@ -570,7 +577,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedTaskResponse'
+            $ref: '#/definitions/responses.PaginatedTaskResponse'
         "400":
           description: Bad Request
           schema:
@@ -604,7 +611,7 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.CreateTaskRequest'
+          $ref: '#/definitions/requests.CreateTaskRequest'
       produces:
       - application/json
       responses:
@@ -647,7 +654,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.DeleteTaskRequest'
+          $ref: '#/definitions/requests.DeleteTaskRequest'
       produces:
       - application/json
       responses:
@@ -688,7 +695,7 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.UpdateTaskRequest'
+          $ref: '#/definitions/requests.UpdateTaskRequest'
       produces:
       - application/json
       responses:
@@ -740,7 +747,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.UserResponse'
+            $ref: '#/definitions/responses.UserResponse'
         "400":
           description: Bad Request
           schema:
@@ -796,7 +803,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.PaginatedUserResponse'
+            $ref: '#/definitions/responses.PaginatedUserResponse'
         "400":
           description: Bad Request
           schema:
@@ -856,7 +863,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.UpdateUserRequest'
+          $ref: '#/definitions/requests.UpdateUserRequest'
       produces:
       - application/json
       responses:
@@ -899,14 +906,14 @@ paths:
         name: credentials
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.LoginRequest'
+          $ref: '#/definitions/requests.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.AuthResponse'
+            $ref: '#/definitions/responses.AuthResponse'
         "400":
           description: Bad Request
           schema:
@@ -932,14 +939,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.CreateUserRequest'
+          $ref: '#/definitions/requests.CreateUserRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_responses.AuthResponse'
+            $ref: '#/definitions/responses.AuthResponse'
         "400":
           description: Bad Request
           schema:
@@ -965,7 +972,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.FriendRequest'
+          $ref: '#/definitions/requests.FriendRequest'
       produces:
       - application/json
       responses:
@@ -1008,7 +1015,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.GetChatRequest'
+          $ref: '#/definitions/requests.GetChatRequest'
       produces:
       - application/json
       responses:
@@ -1037,6 +1044,31 @@ paths:
       summary: Get friends list over WebSocket
       tags:
       - websocket
+  /ws/mark_messages_read:
+    post:
+      consumes:
+      - application/json
+      description: Send event `mark_messages_read` with `with_user_id` and optional
+        `up_to_message_id` to set read_at in conversation.
+      parameters:
+      - description: Mark messages as read payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/requests.MarkMessagesReadRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Mark messages as read over WebSocket
+      tags:
+      - websocket
   /ws/reject_friend_request:
     post:
       consumes:
@@ -1047,7 +1079,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.FriendRequest'
+          $ref: '#/definitions/requests.FriendRequest'
       produces:
       - application/json
       responses:
@@ -1070,7 +1102,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.FriendRequest'
+          $ref: '#/definitions/requests.FriendRequest'
       produces:
       - application/json
       responses:
@@ -1095,7 +1127,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/github_com_ViniciusLugli_mindshelf_internal_dtos_requests.SendChatRequest'
+          $ref: '#/definitions/requests.SendChatRequest'
       produces:
       - application/json
       responses:
