# internal/dtos/requests/ws_message.go
@@ -19,3 +19,8 @@ type SendChatRequest struct {
 	ToUserID uuid.UUID `json:"to_user_id"`
 	Content  string    `json:"content"`
 }
+
+type MarkMessagesReadRequest struct {
+	WithUserID    uuid.UUID  `json:"with_user_id"`
+	UpToMessageID *uuid.UUID `json:"up_to_message_id,omitempty"`
+}
